--- a/mpFormats_2013/mpFormats_2013.csproj
+++ b/mpFormats_2013/mpFormats_2013.csproj
@@ -70,6 +70,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BlockJig.cs" />
     <Compile Include="LayoutName.xaml.cs">
       <DependentUpon>LayoutName.xaml</DependentUpon>
     </Compile>
@@ -80,7 +81,9 @@
     <Compile Include="MpFormats.xaml.cs">
       <DependentUpon>MpFormats.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MpFormatsAdd.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Stamp.cs" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="LayoutName.xaml">
