--- a/mpFormats_2016/mpFormats_2016.csproj
+++ b/mpFormats_2016/mpFormats_2016.csproj
@@ -67,6 +67,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\mpFormats_2013\BlockJig.cs">
+      <Link>BlockJig.cs</Link>
+    </Compile>
     <Compile Include="..\mpFormats_2013\EditUserSurnames.xaml.cs">
       <Link>EditUserSurnames.xaml.cs</Link>
       <DependentUpon>EditUserSurnames.xaml</DependentUpon>
@@ -82,8 +85,14 @@
       <Link>MpFormats.xaml.cs</Link>
       <DependentUpon>MpFormats.xaml</DependentUpon>
     </Compile>
+    <Compile Include="..\mpFormats_2013\MpFormatsAdd.cs">
+      <Link>MpFormatsAdd.cs</Link>
+    </Compile>
     <Compile Include="..\mpFormats_2013\Properties\AssemblyInfo.cs">
       <Link>Properties\AssemblyInfo.cs</Link>
+    </Compile>
+    <Compile Include="..\mpFormats_2013\Stamp.cs">
+      <Link>Stamp.cs</Link>
     </Compile>
   </ItemGroup>
   <ItemGroup>
