Add ISO title blocks

--- a/mpFormats_2020/mpFormats_2020.csproj
+++ b/mpFormats_2020/mpFormats_2020.csproj
@@ -244,6 +244,11 @@
     <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
     <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="..\mpFormats_2013\Resources\Flags\iso-icon.png">
+      <Link>Resources\Flags\iso-icon.png</Link>
+    </Resource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>if $(ConfigurationName) == Debug (
