--- a/mpFormats_2013/mpFormats_2013.csproj
+++ b/mpFormats_2013/mpFormats_2013.csproj
@@ -74,6 +74,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BlockJig.cs" />
+    <Compile Include="FormatSize.cs" />
     <Compile Include="LayoutName.xaml.cs">
       <DependentUpon>LayoutName.xaml</DependentUpon>
     </Compile>
