--- a/mpFormats/mpFormats.csproj
+++ b/mpFormats/mpFormats.csproj
@@ -12,6 +12,7 @@
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
+    <PlatformTarget>x64</PlatformTarget>
     <CodeAnalysisRuleSet>$(SolutionDir)\ModPlus.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x64' ">
@@ -19,9 +20,9 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\x64\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;A2020</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;A2021</DefineConstants>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
-    <AssemblyName>$(AssemblyName)_2020</AssemblyName>
+    <AssemblyName>$(AssemblyName)_2021</AssemblyName>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
@@ -74,6 +75,12 @@
     <DefineConstants>TRACE;A2020</DefineConstants>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <AssemblyName>$(AssemblyName)_2020</AssemblyName>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'A2021|x64'">
+    <OutputPath>bin\x64\A2021\</OutputPath>
+    <DefineConstants>TRACE;A2021</DefineConstants>
+    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
+    <AssemblyName>$(AssemblyName)_2021</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationCore" />
@@ -258,20 +265,29 @@
         </PackageReference>
       </ItemGroup>
     </When>
-    <When Condition=" '$(Configuration)'=='A2020' or '$(Configuration)'=='Debug' ">
+    <When Condition=" '$(Configuration)'=='A2020' ">
       <ItemGroup>
         <PackageReference Include="ModPlus.AutoCAD.API.2020">
           <Version>1.0.0</Version>
           <ExcludeAssets>runtime</ExcludeAssets>
         </PackageReference>
         <PackageReference Include="ModPlus.AutoCAD.Module.2020">
-          <Version>4.2.9.1</Version>
+          <Version>4.3.0.0</Version>
           <ExcludeAssets>runtime</ExcludeAssets>
         </PackageReference>
       </ItemGroup>
-      <PropertyGroup>
-        <Platform>x64</Platform>
-      </PropertyGroup>
+    </When>
+    <When Condition=" '$(Configuration)'=='A2021' or '$(Configuration)'=='Debug' ">
+      <ItemGroup>
+        <PackageReference Include="ModPlus.AutoCAD.API.2021">
+          <Version>1.0.0</Version>
+          <ExcludeAssets>runtime</ExcludeAssets>
+        </PackageReference>
+        <PackageReference Include="ModPlus.AutoCAD.Module.2021">
+          <Version>4.3.0.0</Version>
+          <ExcludeAssets>runtime</ExcludeAssets>
+        </PackageReference>
+      </ItemGroup>
     </When>
   </Choose>
   <ItemGroup>
@@ -280,7 +296,7 @@
       <ExcludeAssets>runtime</ExcludeAssets>
     </PackageReference>
     <PackageReference Include="ModPlusAPI">
-      <Version>1.3.1</Version>
+      <Version>1.6.0</Version>
       <ExcludeAssets>runtime</ExcludeAssets>
     </PackageReference>
     <PackageReference Include="ModPlusStyle">
