--- a/mpFormats/mpFormats.csproj
+++ b/mpFormats/mpFormats.csproj
@@ -295,15 +295,16 @@
   </Choose>
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations">
-      <Version>2019.1.3</Version>
+      <Version>2020.1.0</Version>
       <ExcludeAssets>runtime</ExcludeAssets>
     </PackageReference>
     <PackageReference Include="ModPlusAPI">
-      <Version>1.6.0</Version>
+      <Version>3.1.1</Version>
       <ExcludeAssets>runtime</ExcludeAssets>
+      <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="ModPlusStyle">
-      <Version>2.0.0</Version>
+      <Version>3.4.0</Version>
       <ExcludeAssets>runtime</ExcludeAssets>
     </PackageReference>
     <PackageReference Include="StyleCop.Analyzers">
